// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generating inline messages Shows correct message for multiple inline violations for the same file and line 1`] = `
"
<!--
  2 failure:  Test message, Warning message
  2 warning:  Test message, Warning message
  2 messages
  2 markdown notices
  DangerID: danger-id-blankID;
  File: File.swift;
  Line: 10;
-->  
- :no_entry_sign: Test message
- :no_entry_sign: Warning message
- :warning: Test message
- :warning: Warning message
- :book: Test message
- :book: Warning message
Test message

Warning message
  "
`;

exports[`generating inline messages Shows correct messages for inline/regular violations 1`] = `
"
<!--
  0 failure: 
  2 warning:  Test message, Warning message
  
  
  DangerID: danger-id-blankID;
-->


<table>
  <thead>
    <tr>
      <th width=\\"50\\"></th>
      <th width=\\"100%\\" data-danger-table=\\"true\\">Warnings</th>
    </tr>
  </thead>
  <tbody><tr>
      <td>:warning:</td>
      <td>

  **File.swift#L10** - Test message
  </td>
    </tr>
  
<tr>
      <td>:warning:</td>
      <td>

  Warning message
  </td>
    </tr>
  </tbody>
</table>



<p align=\\"right\\">
  Generated by :no_entry_sign: <a href=\\"http://github.com/danger/danger-js/\\">dangerJS</a>
</p>
"
`;

exports[`generating messages leaves space between <td>s to allow GitHub to render message content as markdown 1`] = `
"
<!--
  1 failure:  **Failure:** Some...
  1 warning:  _Maybe you meant ...
  1 messages
  1 markdown notices
  DangerID: danger-id-example-id;
-->

<table>
  <thead>
    <tr>
      <th width=\\"50\\"></th>
      <th width=\\"100%\\" data-danger-table=\\"true\\">Fails</th>
    </tr>
  </thead>
  <tbody><tr>
      <td>:no_entry_sign:</td>
      <td>

  **Failure:** Something failed!
  </td>
    </tr>
  </tbody>
</table>


<table>
  <thead>
    <tr>
      <th width=\\"50\\"></th>
      <th width=\\"100%\\" data-danger-table=\\"true\\">Warnings</th>
    </tr>
  </thead>
  <tbody><tr>
      <td>:warning:</td>
      <td>

  _Maybe you meant to run \`yarn install\`?_
  </td>
    </tr>
  </tbody>
</table>


<table>
  <thead>
    <tr>
      <th width=\\"50\\"></th>
      <th width=\\"100%\\" data-danger-table=\\"true\\">Messages</th>
    </tr>
  </thead>
  <tbody><tr>
      <td>:book:</td>
      <td>

  \`\`\`ts
function add(a: number, b: number): number {
  return a + b
}
\`\`\`
  </td>
    </tr>
  </tbody>
</table>

List of things:

* one
* two
* three

<p align=\\"right\\">
  Generated by :no_entry_sign: <a href=\\"http://github.com/danger/danger-js/\\">dangerJS</a>
</p>
"
`;
